Bug 336149 - (I18N_EMPTY_MESSAGE) message in About menu
Summary: (I18N_EMPTY_MESSAGE) message in About menu
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-13 00:28 UTC by André Marcelo Alvarenga
Modified: 2014-06-13 09:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (98.54 KB, image/png)
2014-06-13 00:29 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2014-06-13 00:28:33 UTC
See screenshot.
This dialog appears when I click on (i) icon.

Reproducible: Always

Steps to Reproduce:
1. Open Desktop Settings window;
2. Click on Mouse Actions page;
3. Click on (i) icon.



- Running Neon5 201406101459.iso
Comment 1 André Marcelo Alvarenga 2014-06-13 00:29:09 UTC
Created attachment 87155 [details]
Screenshot
Comment 2 Marco Martin 2014-06-13 09:34:44 UTC
Git commit b65eb9a635467d363ac8da6b84135ef954b4ae56 by Marco Martin.
Committed on 13/06/2014 at 09:33.
Pushed by mart into branch 'master'.

don't try to translate QByteArray()

also, proper contexts for containmentactions messages

M  +7    -7    containmentactions/contextmenu/menu.cpp
M  +5    -5    containmentactions/switchwindow/switch.cpp
M  +6    -3    shell/currentcontainmentactionsmodel.cpp

http://commits.kde.org/plasma-workspace/b65eb9a635467d363ac8da6b84135ef954b4ae56