don't try to translate QByteArray()

also, proper contexts for containmentactions messages
BUG:336149